# result

./: .gitignore  CMakeLists.txt  assert.h  common_errors.h  define_error.h  error.h  formatting.h  macros.h  main.cpp  make_result.h  result.h  sonar-project.properties  storage.h  types.h
.github/workflows/: cmake.yml
